src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Off_Site_Event__c</fullName>
        <label>Off Site Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEN Omni Interlocken May &apos;10</fullName>
                </value>
                <value>
                    <fullName>DEN Marriott West May &apos;10</fullName>
                </value>
                <value>
                    <fullName>Cleveland Marriott Feb. &apos;10</fullName>
                </value>
                <value>
                    <fullName>STU Marriott West Feb. &apos;10</fullName>
                </value>
                <value>
                    <fullName>KC Sheraton Feb. &apos;10</fullName>
                </value>
                <value>
                    <fullName>DAL doubletree Feb. &apos;10</fullName>
                </value>
                <value>
                    <fullName>FT Worth Omni Feb. &apos;10</fullName>
                </value>
                <value>
                    <fullName>Atlanta Westin Feb 10</fullName>
                </value>
                <value>
                    <fullName>Las Vegas Anthem CC</fullName>
                </value>
                <value>
                    <fullName>Austin Renaissance Jan &apos;10</fullName>
                </value>
                <value>
                    <fullName>Arizona Golf Resort</fullName>
                </value>
                <value>
                    <fullName>Phoenix Renaissance</fullName>
                </value>
                <value>
                    <fullName>Chicago Westin Jan &apos;10</fullName>
                </value>
                <value>
                    <fullName>Chicago Renaissance Jan &apos;10</fullName>
                </value>
                <value>
                    <fullName>KC Sheraton Overland Park</fullName>
                </value>
                <value>
                    <fullName>Dallas Doubletree</fullName>
                </value>
                <value>
                    <fullName>Sacramento Hilton</fullName>
                </value>
                <value>
                    <fullName>Austin Renaissance Nov 09</fullName>
                </value>
                <value>
                    <fullName>Bali Hai Golf Seminar Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Anthem Event</fullName>
                </value>
                <value>
                    <fullName>Glenmoor Event</fullName>
                </value>
                <value>
                    <fullName>Rolling Green Country Club</fullName>
                </value>
                <value>
                    <fullName>Chicago Art Institute</fullName>
                </value>
                <value>
                    <fullName>Greenbriar Hills CC St. Louis</fullName>
                </value>
                <value>
                    <fullName>Chagrin Valley CC Cleveland</fullName>
                </value>
                <value>
                    <fullName>Barton Creek Austin</fullName>
                    <default>true</default>
                    <label>Barton Creek Austin</label>
                </value>
                <value>
                    <fullName>Bali Hai April 2009</fullName>
                </value>
                <value>
                    <fullName>Chicago Art Institute May &apos;09</fullName>
                </value>
                <value>
                    <fullName>Hotel Arista Naperville</fullName>
                </value>
                <value>
                    <fullName>4 Points Sheraton Akron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Finances_Used__c</fullName>
        <label>Other Finances Used</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Financial_Options__c</fullName>
        <description>What other financial options were covered</description>
        <label>Other Financial Options</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Interests__c</fullName>
        <label>Other Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason_for_Not_Applying__c</fullName>
        <description>Text area to describe the other selection for why a patient did not apply for financing.</description>
        <label>Other Reason for Not Applying</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Who_did_you_share_your_image_with__c</fullName>
        <description>Free text answer for If you shared it with someone,  who was it?</description>
        <label>Other Who did you share your image with?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_reasons_not_to_move_forward__c</fullName>
        <label>Other reasons not to move forward?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_use_of_the_image__c</fullName>
        <description>Other free type options for what the patient did with their image.  Should only be used when the other option has been selected</description>
        <label>Other use of the image</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <description>Rollup of Outstanding Balance from Prosth Exam</description>
        <label>Outstanding Balance</label>
        <summarizedField>Opportunity.Outstanding_Balance_incl_anticipated__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cancelled Not Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PPF_Applied_Amount__c</fullName>
        <description>Patient Preferred Financing Applied Amount</description>
        <label>PPF Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPF_Approved_Amount__c</fullName>
        <inlineHelpText>Patient Preferred Financing Approved Amount</inlineHelpText>
        <label>PPF Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partial_Amount_Financed__c</fullName>
        <label>Partial Amount Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Financing__c</fullName>
        <label>Patient Financing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Cards</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>401K</fullName>
                </value>
                <value>
                    <fullName>Stocks</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Future__c</fullName>
        <label>Patient Future</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_History__c</fullName>
        <label>Patient History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Stated_Medical_Condition__c</fullName>
        <label>Patient Stated Medical Condition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Periodontal_Gum_Disease__c</fullName>
        <label>Periodontal Gum Disease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Age__c</fullName>
        <description>Calculates how long a consult has been in the current pipepline status</description>
        <formula>if(ISBLANK( Pipeline_Date__c ), TODAY() - Datevalue(CreatedDate) , Today() - Pipeline_Date__c)</formula>
        <label>Pipeline Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Date__c</fullName>
        <description>This field holds the date an account was last placed into one of the pipeline stages. Will be used in a formula to determine how long a consult has been in that pipeline. Maintained by a trigger</description>
        <label>Pipeline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practice_Center_Name__c</fullName>
        <formula>Dental_Practice_Partner__r.Center_Information__r.Name</formula>
        <label>Practice Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Formula__c</fullName>
        <formula>CASE( Pre_Screen__c ,
&quot;Green&quot;, &quot;1. Green&quot;,
&quot;Yellow&quot;, &quot;2. Yellow&quot;,
&quot;Red&quot;, &quot;3. Red&quot;,
&quot;Blue (No Hit)&quot;, &quot;4. Blue&quot;,
&quot;5. Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Screen (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen__c</fullName>
        <label>Pre Screen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Checked</fullName>
                    <default>true</default>
                    <label>Not Checked</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue (No Hit)</fullName>
                </value>
                <value>
                    <fullName>Website Down-No Prescreen</fullName>
                </value>
                <value>
                    <fullName>PO Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregnant__c</fullName>
        <label>Pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preliminary_Treatment_Fee_Quoted__c</fullName>
        <label>Preliminary Treatment Fee Quoted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preliminary_Treatment_Plan__c</fullName>
        <description>The Doctor&apos;s suggested plan of treatment for the Prospective Patient</description>
        <label>Preliminary Treatment Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Implant</fullName>
                </value>
                <value>
                    <fullName>Multiple Implants</fullName>
                </value>
                <value>
                    <fullName>Multiple Implant Bridge</fullName>
                </value>
                <value>
                    <fullName>AO4 Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Lower</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Upper</fullName>
                </value>
                <value>
                    <fullName>AO4 Edentulous Lower</fullName>
                </value>
                <value>
                    <fullName>DBL AO4</fullName>
                </value>
                <value>
                    <fullName>DBL AO4 Edentulous</fullName>
                </value>
                <value>
                    <fullName>Upper Denture</fullName>
                </value>
                <value>
                    <fullName>Lower Denture</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Transitional DBL AO4</fullName>
                </value>
                <value>
                    <fullName>None Given</fullName>
                </value>
                <value>
                    <fullName>Lower Overdenture</fullName>
                </value>
                <value>
                    <fullName>Upper Overdenture</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Upper AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Lower AO4</fullName>
                </value>
                <value>
                    <fullName>Phased Barless Interim Double AO4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescribed_Bisphosphonates__c</fullName>
        <label>Prescribed Bisphosphonates</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_IQ_Score__c</fullName>
        <description>Numeric score returned by Prospect IQ. Should only be around on leads where the prescreen was not returned as Green, Yellow, or Red</description>
        <label>Prospect IQ Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_IQ_Tier__c</fullName>
        <description>Text score returned by Prospect IQ. Should only be around on leads where the prescreen was not returned as Green, Yellow, or Red</description>
        <label>Prospect IQ Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosth_Exam_Count__c</fullName>
        <label>Prosth Exam Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prostho_Exam_Date__c</fullName>
        <label>Prostho Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prostho_Exam_Scheduled_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prostho Exam Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questions_asked_about_the_procedure__c</fullName>
        <label>Questions asked about the procedure?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Pain</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Longevity</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_not_applying__c</fullName>
        <description>The patients reason for not applying for financing</description>
        <label>Reason for not applying</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Did_Patient_Apply_for_Financing__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Payment too high</fullName>
                </value>
                <value>
                    <fullName>Not willing to apply w/o partner</fullName>
                </value>
                <value>
                    <fullName>Interest too high</fullName>
                </value>
                <value>
                    <fullName>Unwilling to use credit regardless</fullName>
                </value>
                <value>
                    <fullName>Other: provide explanation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Auto_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a consult should receive an automated phone call reminder by default when scheduling an apt.</description>
        <label>Receive Auto Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Text_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a consult should receive and automated text reminder by default when scheduling an apt</description>
        <label>Receive Text Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_Height_Feet__c</fullName>
        <label>Recent Height Feet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Height_Inches__c</fullName>
        <label>Recent Height Inches</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Weight__c</fullName>
        <label>Recent Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Doctor_Name__c</fullName>
        <formula>Referral_Doctor__r.First_Last__c</formula>
        <label>Referral Doctor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GP doctor who referred the lead to us</description>
        <label>Referral Doctor</label>
        <referenceTo>Practice_Doctor__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Location__c</fullName>
        <description>ClearConnect Referral Location code</description>
        <label>Referral Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Address__c</fullName>
        <formula>if(!isnull(Referral_Office__c), Referral_Office__r.Street__c + BR() ,&apos;&apos;) + 
if(!isnull(Referral_Office__c), Referral_Office__r.City__c + &apos;, &apos; ,&apos;&apos;) + 
if(!isnull(Referral_Office__c), Referral_Office__r.State_Province__c + &apos; &apos; ,&apos;&apos;) + 
if(!isnull(Referral_Office__c), Referral_Office__r.Postal_Code__c ,&apos;&apos;)</formula>
        <label>Referral Office Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Contact__c</fullName>
        <formula>Referral_Office__r.Primary_Contact_Name__c</formula>
        <label>Referral Office Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Name__c</fullName>
        <formula>Referral_Office__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Phone__c</fullName>
        <formula>Referral_Office__r.Phone__c</formula>
        <label>Referral Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GP Office that referred the lead/account to us</description>
        <label>Referral Office</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source_del__c</fullName>
        <label>Referral Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Yellow Pages</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>VIP Event</fullName>
                </value>
                <value>
                    <fullName>Dr. Referral</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Track__c</fullName>
        <description>Indicates the payment track that an implant referral is on.  Has an impact on how the procedure will be handled and the payment to the GP.</description>
        <label>Referral Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track I</fullName>
                </value>
                <value>
                    <fullName>Track II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_Doctor__c</fullName>
        <label>Referring Doctor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refused_Referrals__c</fullName>
        <description>A list of dental practices the account/lead has refused to be referred to.  This will be used to keep us from offering that practice again</description>
        <label>Refused Referrals</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Call__c</fullName>
        <label>Reminder Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Text__c</fullName>
        <label>Reminder Text</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_ICat_on_non_start__c</fullName>
        <description>Did the patient request to have an iCAT knowing they could not financially move forward?</description>
        <inlineHelpText>Did the patient request to have an iCAT knowing they could not financially move forward?</inlineHelpText>
        <label>Requested iCAT/w finance barrier?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Done__c</fullName>
        <label>Research Done</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke to Dr.</fullName>
                </value>
                <value>
                    <fullName>Spoke to friends/family</fullName>
                </value>
                <value>
                    <fullName>Online Research</fullName>
                </value>
                <value>
                    <fullName>Read the Smiling Lessons book</fullName>
                </value>
                <value>
                    <fullName>Read Book/Magazine</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Collected__c</fullName>
        <description>Rollup of Collected Revenue from Prosth Exam</description>
        <label>Revenue Collected</label>
        <summarizedField>Opportunity.Total_Payments__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cancelled Not Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMS_Template__c</fullName>
        <description>Field to be used with Eloqua. This field will hold an SMS template name that will be used to trigger communications with the end user.</description>
        <label>SMS Template</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Alert__c</fullName>
        <description>Holds the value from sales alert from the lead record</description>
        <label>Sales Alert</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_all_the_financial_options_covered__c</fullName>
        <label>Select all the financial options covered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Was_pricing_a_barrier_to_move_forward__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HCF</fullName>
                </value>
                <value>
                    <fullName>Prom Note</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Referral_Track__c</fullName>
        <formula>TEXT(Referral_Track__c)</formula>
        <label>Selected Referral Track</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringStone_Applied_Amount__c</fullName>
        <label>SpringStone Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpringStone_Approved_Amount__c</fullName>
        <label>SpringStone Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpringStone_Interest_Rate__c</fullName>
        <label>SpringStone Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cancelled Not Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Billing_Status_Display__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Billing_Status__c,&quot;Verified&quot;),
        IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;),
        IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;)
)
&amp; &quot; &quot; &amp;
CASE(StrikeForce1__USAddress_Billing_Status__c,
    &quot;Verified&quot;,&quot;Verified&quot;  &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=AccountBilling&quot;,&quot;Mark as Unverified&quot;,&quot;_self&quot;),
    &quot;Not Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=AccountBilling&quot;,&quot;Mark as Verified&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Billing_Status__c</fullName>
        <label>Billing Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Billing_Verify__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StrikeForce1__USAddressVerification?id=&quot;&amp;Id&amp;&quot;&amp;MappingName=AccountBilling&quot;,&quot;Verify Address&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Shipping_Status_Display__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Shipping_Status__c,&quot;Verified&quot;), 
IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;), 
IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;)) 
&amp; &quot; &quot; &amp; 
CASE(StrikeForce1__USAddress_Shipping_Status__c, 
&quot;Verified&quot;,&quot;Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=AccountShipping&quot;,&quot;Mark as Unverified&quot;,&quot;_self&quot;), 
&quot;Not Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=AccountShipping&quot;,&quot;Mark as Verified&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Shipping_Status__c</fullName>
        <label>Shipping Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Shipping_Verify__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StrikeForce1__USAddressVerification?id=&quot;&amp;Id&amp;&quot;&amp;MappingName=AccountShipping&quot;,&quot;Verify Address&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Fax_DaysRemaining__c</fullName>
        <formula>IF(NOT(ISNULL(StrikeForce4__DNC_Fax_LastChecked__c)),
    &quot; Valid for &quot; &amp;
    TEXT(ROUND(180 - (NOW() - StrikeForce4__DNC_Fax_LastChecked__c),0)) &amp;
    &quot; more &quot; &amp;
    IF(ROUND(180 - (NOW() - StrikeForce4__DNC_Fax_LastChecked__c),0) &gt; 1,&apos;days&apos;,&apos;day&apos;)
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNC Fax Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce4__DNC_Fax_LastChecked__c</fullName>
        <label>DNC Fax Last Checked</label>
        <type>DateTime</type>
    </fields>
</CustomObject>